# schemas/openapi.json
@@ -1382,6 +1382,11 @@
             "title": "Links",
             "type": "array"
           },
+          "local_decisions_only": {
+            "default": false,
+            "title": "Local Decisions Only",
+            "type": "boolean"
+          },
           "name": {
             "maxLength": 120,
             "minLength": 1,
@@ -1537,6 +1542,17 @@
               }
             ],
             "title": "Links"
+          },
+          "local_decisions_only": {
+            "anyOf": [
+              {
+                "type": "boolean"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Local Decisions Only"
           },
           "name": {
             "anyOf": [
